Update Dremio driver for Metabase 60 beta